--- a/notebooks/california_housing_challenge.ipynb
+++ b/notebooks/california_housing_challenge.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "1d682b5f-9782-4fa7-9c68-0ab99c21fdc6",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "id": "e4000715-de8b-4dd8-b99c-c1244cdd3cc3",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "id": "dacc6b0e-8754-4a9e-abd8-37583baf7450",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "3ed3a610-10a5-4932-8007-c4b346946026",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
        "4    -122.41        4.500  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "5c8c9370-25ee-49cd-88ec-8221ca0d5843",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "8e078b82-11d9-4548-bf6e-45b7c8e69682",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
        "max    35682.000000    502.990610     41.950000   -114.550000      5.000010  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "451bfd77-4d5a-4b0e-a377-ddd1aca9734e",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "0cb7051a-923f-4877-b6b1-29215e5f049a",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "a85f7740-45f1-4b6a-8655-de36800d9f44",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "id": "a33cde0b-9fee-414a-9215-aac6f1f9b1d4",
    "metadata": {},
    "outputs": [
@@ -548,7 +548,7 @@
        "5.00001"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,25 +560,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "07bd3588-85bc-4bf6-ab7b-b553b1203a74",
+   "execution_count": 11,
+   "id": "91c638df-ef57-4c9c-9ba1-91d5914f04cb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False    35310\n",
-       "True      1827\n",
+       "5.00001    1827\n",
+       "1.62500     215\n",
+       "1.37500     194\n",
+       "1.12500     171\n",
+       "1.87500     169\n",
        "Name: MedHouseVal, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(df_train['MedHouseVal']==5.00001).value_counts()"
+    "df_train['MedHouseVal'].value_counts().sort_values(ascending=False).head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67614dfe-9221-4c67-bb49-244428230116",
+   "metadata": {},
+   "source": [
+    "Data is capped at 5.00001 mil"
    ]
   },
   {
@@ -591,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "id": "c63c067f-0047-41c3-820e-bfc8d0c4cd9c",
    "metadata": {},
    "outputs": [
@@ -617,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "id": "69b204cd-0504-42f7-a26b-77ac86197f8e",
    "metadata": {},
    "outputs": [
@@ -635,7 +646,7 @@
        "Name: AveOccup, dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,18 +665,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "id": "9d4a6674-f56c-4338-986a-7ed11cb72206",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dropping the 502.990610 outlier\n",
-    "df_train = df_train[df_train[\"AveOccup\"] > 100]"
+    "# Dropping the outliers\n",
+    "df_train = df_train[df_train['AveOccup'] < 100].reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "id": "fe6481e9-8fec-414f-9a04-ee6518cfc593",
    "metadata": {},
    "outputs": [
@@ -683,7 +694,7 @@
        "Name: AveOccup, dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +705,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
+   "id": "ca4c77c3-8628-4445-866c-357dd70b2aa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41.214286    1\n",
+       "33.987712    1\n",
+       "18.821818    1\n",
+       "16.117647    1\n",
+       "16.091954    1\n",
+       "Name: AveOccup, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train['AveOccup'].value_counts().sort_index(ascending=False).head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "f02bccde-98cf-4479-ae74-7c6f834dfd35",
    "metadata": {},
    "outputs": [
