--- a/notebooks/california_housing_challenge.ipynb
+++ b/notebooks/california_housing_challenge.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "1d682b5f-9782-4fa7-9c68-0ab99c21fdc6",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "e4000715-de8b-4dd8-b99c-c1244cdd3cc3",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "dacc6b0e-8754-4a9e-abd8-37583baf7450",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "3ed3a610-10a5-4932-8007-c4b346946026",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
        "4    -122.41        4.500  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "5c8c9370-25ee-49cd-88ec-8221ca0d5843",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "8e078b82-11d9-4548-bf6e-45b7c8e69682",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
        "max    35682.000000    502.990610     41.950000   -114.550000      5.000010  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "451bfd77-4d5a-4b0e-a377-ddd1aca9734e",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "0cb7051a-923f-4877-b6b1-29215e5f049a",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "a85f7740-45f1-4b6a-8655-de36800d9f44",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "a33cde0b-9fee-414a-9215-aac6f1f9b1d4",
    "metadata": {},
    "outputs": [
@@ -548,7 +548,7 @@
        "5.00001"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "91c638df-ef57-4c9c-9ba1-91d5914f04cb",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
        "Name: MedHouseVal, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "c63c067f-0047-41c3-820e-bfc8d0c4cd9c",
    "metadata": {},
    "outputs": [
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "69b204cd-0504-42f7-a26b-77ac86197f8e",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
        "Name: AveOccup, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "2bfd0c44-93c1-4024-94ba-f9a3aab063ba",
    "metadata": {},
    "outputs": [
@@ -672,7 +672,7 @@
        "Name: AveOccup, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "9d4a6674-f56c-4338-986a-7ed11cb72206",
    "metadata": {},
    "outputs": [],
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "fe6481e9-8fec-414f-9a04-ee6518cfc593",
    "metadata": {},
    "outputs": [
@@ -720,7 +720,7 @@
        "Name: AveOccup, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "ca4c77c3-8628-4445-866c-357dd70b2aa4",
    "metadata": {},
    "outputs": [
@@ -746,7 +746,7 @@
        "Name: AveOccup, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "f02bccde-98cf-4479-ae74-7c6f834dfd35",
    "metadata": {},
    "outputs": [
@@ -794,12 +794,12 @@
    "id": "5e474c25-abeb-4c1b-8d37-5bda064be773",
    "metadata": {},
    "source": [
-    "### Average Occupancy Distribution"
+    "### Median house value distribution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "id": "0f5c0ae8-8eb5-4ee5-992a-55052a26fda7",
    "metadata": {},
    "outputs": [
@@ -825,7 +825,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
+   "id": "fb215f00-8121-4743-adf9-10bf373044a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.00001    1827\n",
+       "5.00000      46\n",
+       "4.99100       2\n",
+       "4.99000       1\n",
+       "4.98800       1\n",
+       "Name: MedHouseVal, dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train['MedHouseVal'].value_counts().sort_index(ascending=False).head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d736d5ee-532c-4e9c-9c88-f6787ac472d7",
+   "metadata": {},
+   "source": [
+    "### Correlation matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "adc24329-b2ab-417a-b0e4-e137d614a25e",
    "metadata": {},
    "outputs": [],
@@ -836,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "bab925d2-621d-4f70-86a9-f106426cfa79",
    "metadata": {},
    "outputs": [],
@@ -847,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "id": "7bf7c3af-09e8-4cd3-8af1-463b7e9fbc27",
    "metadata": {},
    "outputs": [
@@ -893,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "id": "77bc97c0-1636-4612-b010-678fdc698594",
    "metadata": {},
    "outputs": [
@@ -914,7 +948,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "c967061b-dedf-41db-9f66-4fb12c3360df",
    "metadata": {},
    "outputs": [
@@ -947,7 +981,7 @@
        "Name: MedHouseVal, Length: 3723, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "c635b0a5-deaa-4093-bc24-60e2aad430f5",
    "metadata": {},
    "outputs": [
@@ -976,7 +1010,7 @@
        "Name: MedHouseVal, dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
