--- a/notebooks/california_housing_challenge.ipynb
+++ b/notebooks/california_housing_challenge.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "id": "1d682b5f-9782-4fa7-9c68-0ab99c21fdc6",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "e4000715-de8b-4dd8-b99c-c1244cdd3cc3",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "dacc6b0e-8754-4a9e-abd8-37583baf7450",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "3ed3a610-10a5-4932-8007-c4b346946026",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "4    -122.41        4.500  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "5c8c9370-25ee-49cd-88ec-8221ca0d5843",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "8e078b82-11d9-4548-bf6e-45b7c8e69682",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
        "max    35682.000000    502.990610     41.950000   -114.550000      5.000010  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "451bfd77-4d5a-4b0e-a377-ddd1aca9734e",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "0cb7051a-923f-4877-b6b1-29215e5f049a",
    "metadata": {},
    "outputs": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "a85f7740-45f1-4b6a-8655-de36800d9f44",
    "metadata": {},
    "outputs": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "a33cde0b-9fee-414a-9215-aac6f1f9b1d4",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
        "5.00001"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "91c638df-ef57-4c9c-9ba1-91d5914f04cb",
    "metadata": {},
    "outputs": [
@@ -577,7 +577,7 @@
        "Name: MedHouseVal, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "c63c067f-0047-41c3-820e-bfc8d0c4cd9c",
    "metadata": {},
    "outputs": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "69b204cd-0504-42f7-a26b-77ac86197f8e",
    "metadata": {},
    "outputs": [
@@ -648,7 +648,7 @@
        "Name: AveOccup, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "2bfd0c44-93c1-4024-94ba-f9a3aab063ba",
    "metadata": {},
    "outputs": [
@@ -674,7 +674,7 @@
        "Name: AveOccup, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "9d4a6674-f56c-4338-986a-7ed11cb72206",
    "metadata": {},
    "outputs": [],
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "fe6481e9-8fec-414f-9a04-ee6518cfc593",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
        "Name: AveOccup, dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "ca4c77c3-8628-4445-866c-357dd70b2aa4",
    "metadata": {},
    "outputs": [
@@ -748,7 +748,7 @@
        "Name: AveOccup, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "f02bccde-98cf-4479-ae74-7c6f834dfd35",
    "metadata": {},
    "outputs": [
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "0f5c0ae8-8eb5-4ee5-992a-55052a26fda7",
    "metadata": {},
    "outputs": [
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "id": "fb215f00-8121-4743-adf9-10bf373044a4",
    "metadata": {},
    "outputs": [
@@ -842,7 +842,7 @@
        "Name: MedHouseVal, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "adc24329-b2ab-417a-b0e4-e137d614a25e",
    "metadata": {},
    "outputs": [],
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "bab925d2-621d-4f70-86a9-f106426cfa79",
    "metadata": {},
    "outputs": [],
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "id": "7bf7c3af-09e8-4cd3-8af1-463b7e9fbc27",
    "metadata": {},
    "outputs": [
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "id": "77bc97c0-1636-4612-b010-678fdc698594",
    "metadata": {},
    "outputs": [
@@ -950,7 +950,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,12 +961,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c55aa09a-74d2-4e8d-bead-00d1fa077f36",
+   "metadata": {},
+   "source": [
+    "## Preprocessing data before modelin"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "24ecee48-ae3e-4bf5-ba70-905950ff2da0",
+   "execution_count": 28,
+   "id": "f3bd1ce5-bda9-4184-9bd2-b034fc2db751",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "scaler = StandardScaler()\n",
+    "\n",
+    "scaler.fit(df_train)\n",
+    "\n",
+    "StandardScaler(copy=True,\n",
+    "               with_mean=True,\n",
+    "               with_std=True)\n",
+    "\n",
+    "df_train_scaled = scaler.transform(df_train)"
+   ]
   }
  ],
  "metadata": {
