--- a/notebooks/california_housing_challenge.ipynb
+++ b/notebooks/california_housing_challenge.ipynb
@@ -965,7 +965,7 @@
    "id": "c55aa09a-74d2-4e8d-bead-00d1fa077f36",
    "metadata": {},
    "source": [
-    "## Preprocessing data before modelin"
+    "## Preprocessing data before modeling"
    ]
   },
   {
