--- a/notebooks/california_housing_challenge.ipynb
+++ b/notebooks/california_housing_challenge.ipynb
@@ -975,13 +975,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = StandardScaler()\n",
+    "scaler = StandardScaler(copy=True,\n",
+    "                        with_mean=True,\n",
+    "                        with_std=True)\n",
     "\n",
     "scaler.fit(df_train)\n",
-    "\n",
-    "StandardScaler(copy=True,\n",
-    "               with_mean=True,\n",
-    "               with_std=True)\n",
     "\n",
     "df_train_scaled = scaler.transform(df_train)"
    ]
