--- a/notebooks/wild_blueberry_yield_prediction.ipynb
+++ b/notebooks/wild_blueberry_yield_prediction.ipynb
@@ -937,7 +937,9 @@
    "id": "5eaed482-cc5e-4eda-a08a-9166633a508d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Pairplots between pollinators and temperatures"
+   ]
   }
  ],
  "metadata": {
