--- a/notebooks/wild_blueberry_yield_prediction.ipynb
+++ b/notebooks/wild_blueberry_yield_prediction.ipynb
@@ -851,7 +851,7 @@
    "id": "614dc5e7-6505-46d4-a090-4aa1b1c6346a",
    "metadata": {},
    "source": [
-    "The distribution of the label yield looks similar to the distribution of the features 'fruitset', 'fruitmass' and 'seeds'. Since these features are not described (see notebook intro) we can hypotesize that they have been inferred from the label yield. Thus, it's safer to exclude them from the models."
+    "The distribution of the label yield looks similar to the distribution of the features 'fruitset', 'fruitmass' and 'seeds'. Since these features are not described (see notebook intro) we can hypotesize that they have been inferred from the label yield."
    ]
   },
   {
@@ -927,8 +927,9 @@
    "id": "9c70fb7d-f230-4e6f-928f-0455bf09623a",
    "metadata": {},
    "source": [
-    "- The correlation matrix shows a very similar behaviour between the features 'fruitset', 'fruitmass' and 'seeds and the lable 'yield', thus the above hypotesis was quite likely correct\n",
-    "- The feature 'clonesize' and 'honeybee' looks to be positively correlated (0.85), we can hypotesize that honeybees are attracted to blueberry cultivar with higher clonesize (maybe because the domestication of honeybees)"
+    "- The correlation matrix shows a very similar and a high correlation behaviour between the features 'fruitset', 'fruitmass' and 'seeds and the lable 'yield', thus the above hypotesis was quite likely correct\n",
+    "- The feature 'clonesize' and 'honeybee' looks to be positively correlated (0.85), we can hypotesize that honeybees are attracted to blueberry cultivation with higher clonesize (maybe because the domestication of honeybees)\n",
+    "- The temperature measures are duplicated, it's enough to keep just one"
    ]
   },
   {
