--- a/notebooks/california_housing_challenge.ipynb
+++ b/notebooks/california_housing_challenge.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "1d682b5f-9782-4fa7-9c68-0ab99c21fdc6",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,8 @@
     "\n",
     "import seaborn as sns\n",
     "\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -693,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "9d4a6674-f56c-4338-986a-7ed11cb72206",
    "metadata": {},
    "outputs": [],
@@ -970,18 +971,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "f3bd1ce5-bda9-4184-9bd2-b034fc2db751",
+   "execution_count": 10,
+   "id": "de6dbc43-8ba4-4a25-bf90-a4eb045d4f36",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Define X and y for the training set\n",
+    "X = df_train.drop('MedHouseVal', axis=1)\n",
+    "y = df_train['MedHouseVal']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a00f4568-211d-4f28-bc19-079f29d7165c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Splitting train dataset into train and test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f3bd1ce5-bda9-4184-9bd2-b034fc2db751",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "StandardScaler.fit() takes from 2 to 4 positional arguments but 5 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [12], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m scaler \u001b[38;5;241m=\u001b[39m StandardScaler(copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m      2\u001b[0m                         with_mean\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m      3\u001b[0m                         with_std\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m----> 5\u001b[0m \u001b[43mscaler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_test\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: StandardScaler.fit() takes from 2 to 4 positional arguments but 5 were given"
+     ]
+    }
+   ],
    "source": [
     "scaler = StandardScaler(copy=True,\n",
     "                        with_mean=True,\n",
     "                        with_std=True)\n",
     "\n",
-    "scaler.fit(df_train)\n",
-    "\n",
-    "df_train_scaled = scaler.transform(df_train)"
+    "scaler.fit(X_train, X_test, y_train, y_test)"
    ]
   }
  ],
